--- a/index.html
+++ b/index.html
@@ -2,77 +2,80 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="style.css" />
-  <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Forms 101</title>
+  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 
-<!--! Fiks denne koden før den vises fram til et annet kurs!  -->
-
 <body>
+
   <form action="#" method="post" id="email-collector">
-    <fieldset id="main-content">
+    <fieldset>
       <legend>Forms 101</legend>
-      <div>
+
+      <!-- Checkbox -->
+      <div class="form-group">
+        <label for="toggle-grid">Grid toggled</label>
         <input type="checkbox" name="toggle" id="toggle-grid" />
-        <label for="toogle-grid">Grid toggled</label>
       </div>
+
       <div class="flex">
         <div class="main-form">
-          <label for="f-name">First name</label>
-          <div>
-            <input type="text" name="first-name" id="name" placeholder="First name" />
+          <div class="form-group">
+            <label for="f-name">First Name</label>
+            <input required type="text" id="f-name" name="first-name" minlength="2" placeholder="First name">
           </div>
-        </div>
-        <div>
-          <label for="l-name" name="Last-name" id="l-name">Last name
-          </label>
-          <div>
-            <input type="text" name="last-name" id="l-name" placeholder="Last name" minlength="2" />
+          <div class="form-group">
+            <label for="l-name">Last Name</label>
+            <input required id="l-name" type="text" name="last-name" placeholder="Last name" minlength="2" />
           </div>
         </div>
 
-        <div>
-          <label for="e-mail" name="email" id="email">E-mail</label>
-          <div>
-            <input type="email" name="email" id="email" placeholder="E-mail" minlength="2" />
-            <datalist id="default-emails">
-              />
-              <option value="joakim_villo@hotmail.com"></option>
-              <option value="villokodehode@gmail.com"></option>
+        <div class="main-form">
+          <div class="form-group">
+            <label for="email">E-mail</label>
+            <input list="default-email" required type="email" name="email" id="email" placeholder="Your email">
+            <datalist id="default-email">
+              <option value="bob_marley@hotmail.com"></option>
+              <option value="joakim@jobloop.no"></option>
             </datalist>
           </div>
-        </div>
-        <div>
-          <label for="tel">Phone Number</label>
-          <div>
+
+          <div class="form-group">
+            <label for="tel">Phone Number</label>
             <input type="tel" name="phone" id="tel" placeholder="93285044" pattern="[0-9]{3} [0-9]{2} [0-9]{3}"
               minlength="2" />
           </div>
         </div>
-        <button class="btn main-btn" type="submit">
-          Submit form
-        </button>
-        <input type="reset" />
-        <input type="date" name="date" />
-        <input type="color" />
-        <input type="file" />
-        <input type="password" />
-        <input type="search" placeholder="search" />
 
-        <label for="cars">Choose your car</label>
-        <select name="cars" id="cars">
-          <option value="Volvo">Volvo</option>
-          <option value="BMW">BMW</option>
-          <option value="Nissan">Nissan</option>
-        </select>
-        <p>"Vi deler ikke info med noen"
-          -Absolutely no-one</p>
+        <div class="form-group">
+          <button class="btn main-btn" type="submit">Submit form</button>
+        </div>
+
+        <div class="form-group">
+          <input type="reset">
+          <input type="date" name="date">
+          <input type="color">
+          <input type="file" name="file" id="file">
+          <input type="password" name="password" id="password">
+          <input type="search" name="search" id="search">
+
+          <label for="cars">Choose your car</label>
+          <select name="cars" id="cars">
+            <option value="Volvo">Volvo</option>
+            <option value="BMW">BMW</option>
+            <option value="Lada">Lada</option>
+            <option value="Nissan">Nissan</option>
+          </select>
+
+          <p>"We do not share information with anyone." - Absolutely no one</p>
+        </div>
       </div>
     </fieldset>
   </form>
+
 </body>
 
 </html>
